--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "La casa de la chipa - Qoarto Lab",
   "short_name": "PDV",
-  "start_url": "index.html",
-  "display": "standalone",
+  "start_url": "index.html?fullscreen=true",
+  "display": "fullscreen",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "description": "Self Service Platform.",
